# JSBind

./: .clang-format  .gitignore  README.md  xmake.lua
Contrast/: A.cpp  A.h  B.cpp  B.h  BB.cpp  BB.h  Button.cpp  Button.h  ImageView.cpp  ImageView.h  View.cpp  View.h  main.cpp
JSGenerator/: CMakeLists.txt
JSGenerator/JSGenerator/: CPPVectorRegisterGenerator.cs  FindVectorType.cs  HelperGenerator.cs  JSClassRegister.cs  MemberFunctionGenerator.cs  Misc.cs  Program.cs  Register.cs  RegisterAllClassFileGenerator.cs  RegisterSharedPtrSoureFileGenerator.cs  RegisterSourceFileGenerator.cs  RegisterTemplateGenerator.cs  VectorGenerator.cs
Lib/: NativeObject.cpp  NativeObject.h  QuickjsHelper.cpp  QuickjsHelper.h
Scripts/: main.js
Source/: A.cpp  A.h  B.cpp  B.h  Main.cpp  QuickjsHelper.cpp  QuickjsHelper.h
Source/Data/: A.cpp  A.h  B.cpp  B.h  BB.cpp  BB.h  BBB.cpp  BBB.h  Button.cpp  Button.h  ImageView.cpp  ImageView.h  View.cpp  View.h
Validation/: main.cpp
